<resources>
    <string name="app_name">Smart Pantry Manager</string>
    <string name="home_title">SMART PANTRY</string>
    <string name="home_subtitle">Plan smarter. Waste less.</string>
    <string name="my_pantry">My Pantry</string>
    <string name="my_pantry_description">Manage the ingredients you have at home</string>
    <string name="suggested_recipes">Suggested Recipes</string>
    <string name="suggested_recipes_description">Find recipes you can make with your pantry</string>
    <string name="settings">Settings</string>
    <string name="settings_description">Manage your app preferences</string>
    <string name="pantry_title">MY PANTRY</string>
    <string name="pantry_subtitle">Keep track of what you have at home.</string>
    <string name="add_item">+ ADD ITEM</string>
</resources>