<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pantry_cream"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textColor="@color/pantry_dark_green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toTopOf="parent"


    />
    <TextView
        android:id="@+id/textHomeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_subtitle"
        android:textColor="@color/pantry_muted_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHomeTitle"

        />

    <Button
        android:id="@+id/buttonMyPantry"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:text="@string/my_pantry"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:backgroundTint="@color/pantry_green"
        app:layout_constraintWidth_max="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHomeSubtitle"
        />

    <Button
        android:id="@+id/buttonSuggestedRecipes"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/suggested_recipes"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:backgroundTint="@color/pantry_dark_green"
        app:layout_constraintWidth_max="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonMyPantry"
        />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/settings"
        android:textColor="@color/pantry_dark_green"
        android:textSize="17sp"
        android:textStyle="bold"
        android:backgroundTint="@color/pantry_light_green"
        app:layout_constraintWidth_max="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSuggestedRecipes"
        />



</androidx.constraintlayout.widget.ConstraintLayout>